Solve  breakpoint for nav header for medium devices, Add spacing to feature image, create custom app.js script, add touch event for feature images, use retina images for feature section

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@
 	margin-top: 20px;
 }
 
-#header-2 .main-nav.navbar.navbar-default.navbar-fixed-top{
+#header-2 .main-nav.navbar.navbar-default.navbar-fixed-top {
 	height: 78px;
 }
 
@@ -109,7 +109,7 @@
 	background-color: #f86029;
 }
 */
-.navbar-default{
+.navbar-default {
 	border: none;
 	transition: background-color 0.5s ease;
 }
@@ -119,7 +119,7 @@
 	background: none;
 }
 
-#header h1{
+#header h1 {
 	/*background: black;*/
 }
 
@@ -226,7 +226,7 @@
 	color: #fff;
 }
 
-.content-2-2 .icon-outline img{
+.content-2-2 .icon-outline img {
 	position: relative;
 	top: 25px;
 }
@@ -303,7 +303,7 @@
 	padding-bottom: 0;
 }
 
-.feature-box{
+.feature-box {
 	/*background: #FFFFFF;*/
 	/*height: 170px;*/
 	/*border: 1px solid #CCCCCC;*/
@@ -311,16 +311,17 @@
 	padding: 0 16px;
 }
 
-#how-it-works img{
-	height: 350px;
-}
-
-
-#testimonials h1{
+.how-image {
+	max-height: 400px;
+	margin-top: 24px;
 	margin-bottom: 24px;
 }
 
-.testimonial-box{
+#testimonials h1 {
+	margin-bottom: 24px;
+}
+
+.testimonial-box {
 	background: #FFFFFF;
 	min-height: 360px;
 	padding: 90px 20px;
@@ -340,7 +341,7 @@
 	border: 2px solid #f86029;
 }
 
-.testimonial-box small{
+.testimonial-box small {
 	letter-spacing: 1.5px;
 }
 
@@ -359,11 +360,11 @@
 
 /* Join section */
 
-#join{
+#join {
 	padding: 4.5em 0;
 }
 
-#join img{
+#join img {
 	height: 250px;
 }
 
@@ -380,11 +381,11 @@
 	top: 45px;
 }
 
-#contact .underlined-title h1{
+#contact .underlined-title h1 {
 	color: #FFFFFF;
 }
 
-#contact .form-container{
+#contact .form-container {
 	    border: 1px solid #CCCCCC;
 }
 
@@ -494,14 +495,14 @@
 
 	#header-2 .navbar-fixed-top .navbar-collapse {
 		margin-top: 15px;
-		background: rgba(0,0,0,0.3);
+		background: rgba(0,0,0,0.4);
 	}
 
-	.icon{
+	.icon {
 		top: 0;
 	}
 
-	.feature-box{
+	.feature-box {
 		text-align: center;
 	}
 
@@ -517,6 +518,50 @@
 
 
 
+}
+
+/* Media query to override bootstrap navbar breakpoint */
+@media (max-width: 991px) {
+  .navbar-header {
+      float: none;
+  }
+  .navbar-left,.navbar-right {
+      float: none !important;
+  }
+  .navbar-toggle {
+      display: block;
+  }
+  .navbar-collapse {
+      border-top: 1px solid transparent;
+      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+  }
+  .navbar-fixed-top {
+      top: 0;
+      border-width: 0 0 1px;
+  }
+  .navbar-collapse.collapse {
+      display: none!important;
+  }
+
+	#header-2 .navbar-fixed-top .navbar-collapse {
+		margin-top: 15px;
+		background: rgba(0,0,0,0.3);
+	}
+  .navbar-nav {
+      float: none!important;
+      margin-top: 7.5px;
+  }
+
+  .navbar-nav>li {
+      float: none;
+  }
+  .navbar-nav>li>a {
+      padding-top: 10px;
+      padding-bottom: 10px;
+  }
+  .collapse.in{
+      display:block !important;
+  }
 }
 
 /* Large Devices, Wide Screens */
